--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./build/css/style.css --watch",
-    "prettier": " npx prettier --write **/*.html"
+    "prettier": "npx prettier --write ./build/*.html"
   },
   "keywords": [],
   "author": "",
